--- a/Index.html
+++ b/Index.html
@@ -27,9 +27,10 @@
       </ul>
     </nav>
   </div>
-  </header>
+  </header>    
 
   <!-- Menu Section -->
+  <div class="food-card">
   <section class="menu-section" id="menu">
     <div class="menu-item">
       <img src="vadapav.jpg" alt="vadapav">
@@ -90,7 +91,7 @@
       <img src="Samosa.jpg" alt="Samosa">
       <div class="menu-info">
         <h3>Schezwan Samosa</h3>
-        <p>A deep-fried pastry with Perfectly crispy on outside soft on the inside.</p>
+        <p>Crispy outside, soft inside with spicy  in every bite.</p>
       </div>
       <div class="menu-footer">
         <span class="price">₹40</span>
@@ -207,8 +208,10 @@
           <button class="add-btn" onclick="addToCart('fries', 110)">Add</button>
         </div>
       </div>
+
       <!-- MORE ITEMS IF YOU WANT TO ADD , ADD HERE... -->
   </section>
+</div>
 
   <!-- Cart Section -->
   <section id="cart" class="cart-section">
