--- a/Index.html
+++ b/Index.html
@@ -220,7 +220,7 @@
     </h2>
     <div id="cart-items"></div>
     <p id="cart-total">Total: ₹0</p>
-    <button id="checkout-btn" onclick="goToCheckout()">Proceed to Checkout</button>
+    <button id="checkout-btn" onclick="goToCheckout()" style="background: linear-gradient(145deg, #ff416c, #ff4b2b); padding: 12px 25px; border-radius: 30px;">Proceed to Checkout</button>
   </section>
 
   <!-- Checkout Section -->
